# alpha-zero-general

./: pyproject.toml  requirements.txt
src/: arena.py  coach.py  game.py  main.py  mcts.py  neural_net.py
src/connect4/: Connect4Game.py  README.md
src/connect4/keras/: Connect4NNet.py  NNet.py
src/dotsandboxes/: DotsAndBoxesGame.py  DotsAndBoxesServer.py  main-dotsandboxes.py  pit-dotsandboxes.py
src/dotsandboxes/keras/: DotsAndBoxesNNet.py  NNet.py
src/gobang/: GobangGame.py  GobangPlayers.py
src/gobang/keras/: GobangNNet.py  NNet.py
src/othello/: OthelloGame.py  OthelloPlayers.py  pit.py
src/othello/keras/: NNet.py  OthelloNNet.py
src/rts/: RTSGame.py  RTSPlayers.py  learn.py  pit.py
src/rts/keras/: NNet.py  RTSNNet.py
src/rts/src/: config.py
src/rts/visualization/: rts_ue4.py
src/santorini/: SantoriniGame.py  SantoriniPlayers.py
src/tafl/: TaflGame.py  TaflPlayers.py  mainTafl.py  pitTafl.py
src/tafl/keras/: NNet.py  TaflNNet.py
src/tictactoe/: README.md  TicTacToeGame.py  TicTacToePlayers.py
src/tictactoe/keras/: NNet.py  TicTacToeNNet.py
src/tictactoe_3d/: README.md  TicTacToeGame.py  TicTacToePlayers.py
src/tictactoe_3d/keras/: NNet.py  TicTacToeNNet.py
test/: test_all_games.py
test/dotsandboxes/: DotsAndBoxesTest.py
